feat: manage app WhatsApp contacts
